--- a/canvas.html
+++ b/canvas.html
@@ -9,7 +9,7 @@
  </head>
 
  <body>
-	<div class="container"> 
+	<div class="container">
 		<div class="row">
 		<form>
 			<div class="mx-button">
@@ -44,10 +44,10 @@
 
 	<script src="jquery-2.1.3.min.js" type="text/javascript"></script>
 	<script src="bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-<!--	<script src="model.js" type="text/javascript"></script>-->
-<!--	<script src="view.js" type="text/javascript"></script>-->
+	<script src="model.js" type="text/javascript"></script>
+	<script src="view.js" type="text/javascript"></script>
 	<script src="interaction.js" type="text/javascript"></script>
-<!--   <script src="controller.js" type="text/javascript"></script>-->
-   <script src="main.js" type="text/javascript"></script>
+    <script src="controller.js" type="text/javascript"></script>
+    <script src="main.js" type="text/javascript"></script>
   </body>
 </html>
